# SuperCoder

./: .dockerignore  .envrc  .envrc.example  .gitignore  ARCHITECTURE.md  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Jenkinsfile  JenkinsfileStaging  MODULE.bazel  README.md  SECURITY.md  databasestart.sh  docker-compose.yaml  executor.go  go.mod  go.sum  server.go  startservices.sh  startup-worker.sh  startup.sh  terminal.go  test.go  test2.go  worker.go
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: ce_smoke.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: engine_control.rs  lib.rs  main.rs
crates/agent/: Cargo.toml
crates/agent/default-subagents/code-architect/: code-architect.md
crates/agent/default-subagents/code-explorer/: code-explorer.md
crates/agent/default-subagents/code-reviewer/: code-reviewer.md
crates/agent/default-subagents/code-simplifier/: code-simplifier.md
crates/agent/src/: approval.rs  context_engine.rs  error.rs  frontmatter.rs  lib.rs  persistence.rs  session.rs  test_util.rs  types.rs  util.rs
crates/agent/src/agent/: ask_prompt.txt  coding_prompt.txt  compaction.rs  config.rs  loop_.rs  mod.rs  model_profile.rs  plan_prompt.txt  prompt.rs  worktree.rs
crates/agent/src/llm/: anthropic.rs  client.rs  mod.rs  sse.rs  types.rs
crates/agent/src/skills/: mod.rs  parse.rs  registry.rs  tool.rs
crates/agent/src/subagents/: mod.rs  parse.rs  registry.rs  tool.rs  write_lock.rs
crates/agent/src/tool/: apply_patch.rs  ask_user.rs  bash.rs  codebase_graph.rs  codebase_search.rs  edit.rs  edit_plan.rs  git_tool.rs  glob.rs  grep.rs  mod.rs  pr_tool.rs  read.rs  save_plan.rs  schema.rs  start_session.rs  todo_write.rs  write.rs
crates/agent/tests/: integration.rs
crates/bench-runner/: Cargo.toml
crates/bench-runner/src/: main.rs
crates/bulk-indexer/: Cargo.toml
crates/bulk-indexer/src/: main.rs
crates/context-sync/: Cargo.toml
crates/context-sync/src/: lib.rs  streamer.rs
crates/git-ops/: Cargo.toml
crates/git-ops/src/: checkpoint.rs  core.rs  error.rs  exec.rs  ide.rs  lib.rs  no_window.rs  pr.rs  test_util.rs  types.rs  worktree.rs
services/context-engine/cmd/migrations/: BUILD.bazel
services/context-engine/cmd/server/: BUILD.bazel  main.go
services/context-engine/cmd/worker/: BUILD.bazel  main.go
services/context-engine/config/: BUILD.bazel  anthropic.go  falkordb.go  grpc.go  indexer.go  kafka.go  openai.go  qdrant.go  reviewer.go  shard.go
services/context-engine/consumers/: BUILD.bazel  classify_exhaustion.go  finalize_sync_consumer.go  finalizer_trigger.go  mark_batch_helpers.go  stream_batch_consumer.go  stream_batch_decode.go  tasks.go
services/context-engine/controllers/: BUILD.bazel  gzip_body.go  health_controller.go  index_diff_controller.go  index_retrieval_controller.go  index_stream_controller.go  index_sync_complete_controller.go
services/context-engine/injection/: BUILD.bazel  base_container.go  default_config_provider.go  postgres_dsn_provider.go  prompt_provider.go  redis_stream_content_provider.go  server_container.go  worker_container.go
services/context-engine/models/dto/: BUILD.bazel  action_event.go  batch_entry.go  context_request.go  context_response.go  diff_request.go  diff_response.go  graph_query_request.go  graph_query_response.go  index_request.go  index_response.go  index_status_response.go  review_request.go  review_response.go  search_request.go  search_response.go  stream_batch_response.go  sync_complete_request.go  sync_complete_response.go
services/context-engine/models/mappers/: BUILD.bazel  review_mapper.go
services/context-engine/producers/: BUILD.bazel  index_producer.go
services/context-engine/prompts/: BUILD.bazel  audit.txt  max_turns.txt  prompts.go  system_review.txt
services/context-engine/repositories/: BUILD.bazel  errors.go  graph_repository.go  repo_repository.go  shard_repository.go  sync_batch_repository.go  sync_outbox_repository.go  sync_session_repository.go  text_repository.go  vector_repository.go
services/context-engine/repositories/impl/: BUILD.bazel  graph_repository_impl.go  repo_repository_impl.go  shard_repository_impl.go  sync_batch_repository_impl.go  sync_outbox_repository_impl.go  sync_session_repository_impl.go  text_repository_impl.go  vector_repository_ensure_cache.go  vector_repository_impl.go
services/context-engine/services/: BUILD.bazel  chunker_service.go  coder_integration_client.go  embedder_service.go  index_retrieval_service.go  indexer_service.go  ingest_batch_types.go  merkle_service.go  metrics_service.go  outbox_dispatcher.go  parser_service.go  pipeline_errors.go  pipeline_identity.go  retriever_service.go  reviewer.go  source_provider.go  source_provider_memory.go  stream_content_redis.go  streaming_indexer.go  streaming_tasks.go  sync_session_service.go  terminal_error.go
services/context-engine/services/impl/: BUILD.bazel  batch_id.go  codereview_helpers.go  context_assembler.go  contract_diff.go  diff_anchor.go  embedder_semaphore.go  embedder_service_impl.go  errors.go  gatekeeper.go  hld_synthesis.go  index_retrieval_service_impl.go  indexer_constants.go  indexer_router.go  indexer_treesitter.go  indexer_treesitter_extractor.go  indexer_treesitter_languages.go  merkle_service_impl.go  openai_reviewer.go  outbox_dispatcher_impl.go  pipeline.go  prompt_provider.go  resty_client.go  retriever_factory.go  retriever_graph.go  retriever_grep.go  retriever_hybrid.go  retriever_keyword.go  retriever_multi.go  retriever_vector.go  reviewer.go  risk_score.go  shard_bootstrap.go  smart_chunker.go  source_local.go  source_s3.go  (+4 more)
services/gateway/controllers/: BUILD.bazel  completions_controller.go  completions_controller_test.go  health_controller.go  models_controller.go  models_controller_test.go
services/gateway/services/: BUILD.bazel  provider_adapter.go  router.go  router_test.go  sse_parser.go  sse_parser_test.go
(+893 files in other folders)
