[workspace]
resolver = "2"
members = ["crates/agent", "crates/git-ops", "crates/context-sync", "crates/bench-runner", "apps/desktop/src-tauri"]

[profile.dev]
debug = 0
incremental = true
split-debuginfo = "off"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
