[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
# rustls only — do NOT enable default-tls/native-tls; the static musl bench-runner depends on it.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "http2", "charset", "system-proxy", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
async-trait = "0.1"
thiserror = "2"
futures = "0.3"
bytes = "1"
tokio-util = "0.7"
ignore = "0.4"
globset = "0.4"
chrono = "0.4"
regex = "1"
strsim = "0.11"
percent-encoding = "2"
serde_yml = "0.0.12"
include_dir = "0.7"
git-ops = { path = "../git-ops" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
env_logger = "0.11"
