[package]
name = "bulk-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bulk-indexer"
path = "src/main.rs"

[dependencies]
context-sync = { path = "../context-sync" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
