[package]
name = "context-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
sha2 = "0.10"
flate2 = "1"
base64 = "0.22"
ignore = "0.4"
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "fs"] }
tokio-util = "0.7"
# rustls only — do NOT enable default-tls/native-tls; the static musl bench-runner depends on it.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
