[package]
name = "git-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["process", "fs", "io-util"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
