load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "services",
    srcs = [
        "provider_adapter.go",
        "router.go",
        "sse_parser.go",
    ],
    importpath = "github.com/TransformerOptimus/SuperCoder/services/gateway/services",
    visibility = ["//visibility:public"],
    deps = [
        "//services/gateway/models/dto",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "services_test",
    srcs = [
        "router_test.go",
        "sse_parser_test.go",
    ],
    embed = [":services"],
    deps = [
        "//services/gateway/models/dto",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_zap//:zap",
    ],
)
