load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "migrations_lib",
    srcs = ["main.go"],
    importpath = "github.com/TransformerOptimus/SuperCoder/services/context-engine/cmd/migrations",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "migrations",
    embed = [":migrations_lib"],
    visibility = ["//visibility:public"],
)
