load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/TransformerOptimus/SuperCoder/services/context-engine/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//services/context-engine/config",
        "//services/context-engine/controllers",
        "//services/context-engine/injection",
        "//services/context-engine/internal/pkg/api/context",
        "//services/context-engine/internal/pkg/config/core",
        "//services/context-engine/internal/pkg/config/logging",
        "//services/context-engine/services",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_contrib_zap//:zap",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_hibiken_asynqmon//:asynqmon",
        "@org_uber_go_dig//:dig",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
