load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "impl",
    srcs = [
        "batch_id.go",
        "codereview_helpers.go",
        "context_assembler.go",
        "contract_diff.go",
        "diff_anchor.go",
        "embedder_semaphore.go",
        "embedder_service_impl.go",
        "errors.go",
        "gatekeeper.go",
        "hld_synthesis.go",
        "index_retrieval_service_impl.go",
        "indexer_constants.go",
        "indexer_router.go",
        "indexer_treesitter.go",
        "indexer_treesitter_extractor.go",
        "indexer_treesitter_languages.go",
        "merkle_service_impl.go",
        "openai_reviewer.go",
        "outbox_dispatcher_impl.go",
        "pipeline.go",
        "prompt_provider.go",
        "resty_client.go",
        "retriever_factory.go",
        "retriever_graph.go",
        "retriever_grep.go",
        "retriever_hybrid.go",
        "retriever_keyword.go",
        "retriever_multi.go",
        "retriever_vector.go",
        "reviewer.go",
        "risk_score.go",
        "shard_bootstrap.go",
        "smart_chunker.go",
        "source_local.go",
        "source_s3.go",
        "sync_session_diff_helpers.go",
        "sync_session_service_impl.go",
        "sync_session_service_ingest.go",
        "tool_executor.go",
    ],
    importpath = "github.com/TransformerOptimus/SuperCoder/services/context-engine/services/impl",
    visibility = ["//visibility:public"],
    deps = [
        "//services/context-engine/config",
        "//services/context-engine/internal/pkg/config/core",
        "//services/context-engine/models/db/postgres",
        "//services/context-engine/models/dto",
        "//services/context-engine/producers",
        "//services/context-engine/prompts",
        "//services/context-engine/repositories",
        "//services/context-engine/services",
        "@com_github_anthropics_anthropic_sdk_go//:anthropic-sdk-go",
        "@com_github_anthropics_anthropic_sdk_go//option",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_credentials//:credentials",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_aws_aws_sdk_go_v2_service_s3//types",
        "@com_github_aws_smithy_go//:smithy-go",
        "@com_github_google_uuid//:uuid",
        "@com_github_hibiken_asynq//:asynq",
        "@com_github_lib_pq//:pq",
        "@com_github_openai_openai_go//:openai-go",
        "@com_github_openai_openai_go//option",
        "@com_github_openai_openai_go//responses",
        "@com_github_pkoukk_tiktoken_go//:tiktoken-go",
        "@com_github_pkoukk_tiktoken_go_loader//:tiktoken-go-loader",
        "@com_github_smacker_go_tree_sitter//:go-tree-sitter",
        "@com_github_smacker_go_tree_sitter//c",
        "@com_github_smacker_go_tree_sitter//cpp",
        "@com_github_smacker_go_tree_sitter//golang",
        "@com_github_smacker_go_tree_sitter//java",
        "@com_github_smacker_go_tree_sitter//javascript",
        "@com_github_smacker_go_tree_sitter//python",
        "@com_github_smacker_go_tree_sitter//ruby",
        "@com_github_smacker_go_tree_sitter//rust",
        "@com_github_smacker_go_tree_sitter//typescript/tsx",
        "@com_github_smacker_go_tree_sitter//typescript/typescript",
        "@dev_resty_v3//:resty",
        "@io_gorm_datatypes//:datatypes",
        "@io_gorm_gorm//:gorm",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_sys//unix",
        "@org_uber_go_zap//:zap",
    ],
)
