load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dto",
    srcs = [
        "anthropic.go",
        "models.go",
        "openai.go",
        "openai_responses.go",
    ],
    importpath = "github.com/TransformerOptimus/SuperCoder/services/gateway/models/dto",
    visibility = ["//visibility:public"],
)

go_test(
    name = "dto_test",
    srcs = ["openai_test.go"],
    embed = [":dto"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
