load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "impl",
    srcs = [
        "anthropic_adapter.go",
        "anthropic_stream.go",
        "openai_compat_adapter.go",
        "openai_responses_adapter.go",
        "openai_responses_stream.go",
    ],
    importpath = "github.com/TransformerOptimus/SuperCoder/services/gateway/services/impl",
    visibility = ["//visibility:public"],
    deps = [
        "//services/gateway/models/dto",
        "//services/gateway/services",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "impl_test",
    srcs = [
        "anthropic_adapter_test.go",
        "anthropic_stream_test.go",
        "openai_compat_adapter_test.go",
        "openai_responses_adapter_test.go",
        "openai_responses_stream_test.go",
    ],
    embed = [":impl"],
    deps = [
        "//services/gateway/models/dto",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_zap//:zap",
    ],
)
